--- a/1_colorchanger/index.html
+++ b/1_colorchanger/index.html
@@ -18,6 +18,9 @@
         <span class="button" id="blue"></span>
         <span class="button" id="yellow"></span>
         <span class="button" id="purple"></span>
+        <span class="button" id="black"></span>
+        <span class="button" id="darkcyan"></span>
+        <span class="button" id="burlywood"></span>
         
         <h2>Try click on one of the colors above
             <span>to change the background color of this page.</span>
