--- a/AutoColor-Changer/index.htm
+++ b/AutoColor-Changer/index.htm
@@ -9,4 +9,5 @@
     <button id="start">Start</button>
     <button id="stop">Stop</button>
 </body>
+<script src="/AutoColor-Changer/index.js"></script>
 </html>
