--- a/03_BMI Calculator/index.html
+++ b/03_BMI Calculator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <link rel="stylesheet" href="/BMI Calculator/index.css"
+    <link rel="stylesheet" href="/BMI Calculator/index.css">
 </head>
 <body>
     <nav>
